# -20

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html  base.html
mysite/myauth/: tests.py  urls.py  views.py
mysite/myauth/templates/myauth/: about-me.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/shopapp/: admin.py  common.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
mysite/shopapp/fixtures/: products-fixture.json
mysite/shopapp/management/commands/: agg.py  bulk_actions.py  create_order.py  selecting_fields.py
mysite/shopapp/migrations/: 0008_order_receipt.py  0009_product_preview.py  0010_productimage.py  0011_alter_product_description_alter_product_name.py
mysite/shopapp/templates/admin/: csv_form.html
mysite/shopapp/templates/shopapp/: order_list.html  product_form.html  product_update_form.html  products-details.html  products-list.html  products_changelist.html  shop-index.html
