[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "Django project for practical work 20"
authors = ["you <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
djangorestframework = "3.14.0"
django-filter = "22.1"
asgiref = "3.6.0"
pytz = "2022.7.1"
sqlparse = "0.4.2"
Pillow = "9.4.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"